syntax = "proto3";

package payload.manager.common.v1;

/*
  Shared enums/tables for Payload Manager APIs.

  Keep this file focused on definitions reused across service and config protos.
*/

/*
  Storage tier ordered roughly from fastest/least durable â†’ slowest/most durable.
*/
enum Tier {
  TIER_UNSPECIFIED = 0;
  TIER_GPU = 1;
  TIER_RAM = 2;
  TIER_DISK = 3;
  TIER_OBJECT = 4; // S3 / MinIO
}

/*
  Per-payload eviction priority.
*/
enum EvictionPriority {
  EVICTION_PRIORITY_UNSPECIFIED = 0;
  EVICTION_PRIORITY_LOW = 1;
  EVICTION_PRIORITY_NORMAL = 2;
  EVICTION_PRIORITY_HIGH = 3;
  EVICTION_PRIORITY_NEVER = 4;
}
